# static-timing-analysis

./: .gitignore  LICENSE  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
reports/: empty.rpt  mixed_paths.rpt  simple_met.rpt  simple_violated.rpt  timing_full.rpt
src/static_timing_analysis/: __init__.py  timing_path.py  timing_report.py
tests/: conftest.py  test_timing_path.py  test_timing_report.py
